--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .container .leftSide {
     position: relative;
-    background: #2b0047;
+    background: #47003d;
     padding: 40px;
 }
 
